# abrt

./: .gitignore  abrt.spec.in  configure.ac
doc/: Makefile.am  abrt-action-perform-ccpp-analysis.txt  abrt-dump-journal-xorg.txt
doc/dbus-configuration/: Makefile.am
doc/problems-service/: Makefile.am  org.freedesktop.Problems.xml.in
doc/problems-service/tools/: resolve-type.xsl
po/: POTFILES.in
src/applet/: abrt-applet-application.c  applet.c
src/cli-ng/abrtcli/: cli.py
src/cli-ng/tests/: test_filtering.py
src/cli-ng/tests/clitests/: __init__.py
src/configuration-gui/: abrt-config-widget.c  abrt-config-widget.glade
src/daemon/: abrt-action-save-container-data.c  abrt-action-save-package-data.c  abrt-action-save-package-data.conf  abrt-handle-upload.in  abrt-server.c  abrtd.c
src/dbus/: Makefile.am  abrt-dbus.c  abrt_dbus_event.conf  abrt_problems2.c  abrt_problems2_entry.c  abrt_problems2_entry.h  abrt_problems2_entry_node.c  abrt_problems2_entry_node.h  abrt_problems2_node.c  abrt_problems2_node.h  abrt_problems2_sanity_test.py  abrt_problems2_service.c  abrt_problems2_service.h  abrt_problems2_session.c  abrt_problems2_session.h  abrt_problems2_session_node.c  abrt_problems2_session_node.h  abrt_problems2_task.c  abrt_problems2_task.h  abrt_problems2_task_new_problem.c  abrt_problems2_task_new_problem.h  test_new_problem.py
src/hooks/: CCpp.conf  Makefile.am  abrt-hook-ccpp.c  abrt_harvest_vmcore.py.in
src/include/: libabrt.h
src/lib/: hooklib.c  kernel.c  notify_new_path.c
src/plugins/: Makefile.am  abrt-action-analyze-vulnerability.in  abrt-action-perform-ccpp-analysis.in  abrt-dump-journal-xorg.c  abrt-dump-xorg.c  ccpp_event.conf  ccpp_event.conf.in  koops_event.conf  koops_event.conf.in  oops-utils.c  python3_event.conf.in  python_event.conf.in  vmcore_event.conf.in  xorg-utils.c  xorg-utils.h
tests/runtests/aux/: config.sh  pre.sh  test_order
tests/runtests/bz652338-removed-proc-PID/: runtest.sh
tests/runtests/ccpp-plugin/: runtest.sh
tests/runtests/dbus-problems2-sanity/: runtest.sh
tests/runtests/dbus-problems2-sanity/cases/: test_concurency.py  test_crash_signal.py  test_delete_elements.py  test_delete_problems.py  test_duplicates.py  test_foreign_problems.py  test_get_problem_data.py  test_get_problems.py  test_new_problem.py  test_new_problem_sanity.py  test_new_problem_time_limit.py  test_problem_entry_properties.py  test_read_elements.py  test_save_elements.py  test_session_get_authorize_close.py  test_session_limits.py  test_task_new_problem.py
tests/runtests/dbus-problems2-sanity/cases/abrt_p2_testing/: __init__.py
tests/runtests/journal-xorg-crash-processing/: runtest.sh
tests/runtests/journald-integration/: runtest.sh
tests/runtests/oops-processing/: runtest.sh
tests/runtests/upload-handling/: runtest.sh
